--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,11 @@
 version: "3.9"
 services:
+  rabbitmq:
+    image: rabbitmq:3.9.13-management
+    container_name: 'rabbitmq'
+    ports:
+      - 5672:5672
+      - 15672:15672
   postgres:
     image: postgres:14.2
     environment:
